// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Banner/> renders banner with link 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="tom-hackshaw-banner"
    class="leading-none relative my-4 w-full rounded-lg border px-4 py-4 bg-white text-black border-gray-200 dark:bg-stone-700 dark:text-white"
    role="region"
  >
    <div
      class="max-w-3xl w-full m-auto flex mb-2"
    >
      <span
        class="mr-2"
      >
        <div
          data-testid="mock-alert-circle"
        />
      </span>
      <h1
        class="font-medium text-[16px]"
      >
        Test Title
      </h1>
    </div>
    <div
      class="leading-5"
    >
      Test Message
    </div>
    <a
      class="inline-flex no-underline p-4 mt-4 text-white transition rounded-full bg-blue-700 hover:bg-blue-900 hover:text-white hover:cursor-pointer"
      href="https://example.com"
    >
      Click here
    </a>
  </div>
</DocumentFragment>
`;

exports[`<Banner/> renders banner without icon 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="tom-hackshaw-banner"
    class="leading-none relative my-4 w-full rounded-lg border px-4 py-4 bg-white text-black border-gray-200 dark:bg-stone-700 dark:text-white"
    role="region"
  >
    <div
      class="max-w-3xl w-full m-auto flex mb-2"
    >
      <h1
        class="font-medium text-[16px]"
      >
        Test Title
      </h1>
    </div>
    <div
      class="leading-5"
    >
      Test Message
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Banner/> renders error banner correctly 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="tom-hackshaw-banner"
    class="leading-none relative my-4 w-full rounded-lg border px-4 py-4 bg-black text-white border-black dark:bg-black dark:text-white dark:border-white"
    role="region"
  >
    <div
      class="max-w-3xl w-full m-auto flex mb-2"
    >
      <span
        class="mr-2"
      >
        <div
          data-testid="mock-alert-circle"
        />
      </span>
      <h1
        class="font-medium text-[16px]"
      >
        Test Title
      </h1>
    </div>
    <div
      class="leading-5"
    >
      Test Message
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Banner/> renders info banner correctly 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="tom-hackshaw-banner"
    class="leading-none relative my-4 w-full rounded-lg border px-4 py-4 bg-white text-black border-gray-200 dark:bg-stone-700 dark:text-white"
    role="region"
  >
    <div
      class="max-w-3xl w-full m-auto flex mb-2"
    >
      <span
        class="mr-2"
      >
        <div
          data-testid="mock-alert-circle"
        />
      </span>
      <h1
        class="font-medium text-[16px]"
      >
        Test Title
      </h1>
    </div>
    <div
      class="leading-5"
    >
      Test Message
    </div>
  </div>
</DocumentFragment>
`;

exports[`<Banner/> renders maintenance banner correctly 1`] = `
<DocumentFragment>
  <div
    aria-labelledby="tom-hackshaw-banner"
    class="leading-none relative my-4 w-full rounded-lg border px-4 py-4 bg-white text-black border-gray-200"
    role="region"
  >
    <div
      class="max-w-3xl w-full m-auto flex mb-2"
    >
      <span
        class="mr-2"
      >
        <div
          data-testid="mock-alert-circle"
        />
      </span>
      <h1
        class="font-medium text-[16px]"
      >
        Test Title
      </h1>
    </div>
    <div
      class="leading-5"
    >
      Test Message
    </div>
  </div>
</DocumentFragment>
`;
